Bug 378079 - AutoComplete returns invalid rows when more than one AutoCompleteSearch is used.  Patch by Matt Crocker <matt@songbirdnest.com>.  r=gavin.sharp